# eva-vm

./: .gitignore  CMakeLists.txt  README.md  eva.cpp  evm  evm.cpp
src/: EvaVM.cpp  EvaVM.hpp  EvaValue.cpp  EvaValue.hpp  EvaValueType.hpp  Logger.hpp  OpCode.hpp
src/compiler/: EvaCompiler.cpp  EvaCompiler.hpp
src/disassembler/: EvaDisassembler.cpp  EvaDisassembler.hpp
src/logging/: Logger.hpp
src/parser/: EvaParser.cpp  EvaParser.hpp
src/vm/: EvaVM.cpp  EvaVM.hpp  EvaValue.cpp  EvaValue.hpp  Global.cpp  Global.hpp  OpCode.cpp  OpCode.hpp  Scope.hpp
